--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     <div id="container"></div>
     <div id="output"></div>
     <div id="offlineData" style="display:none;"></div>
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
